--- a/index.html
+++ b/index.html
@@ -66,6 +66,12 @@ steam games (and another game that shall not be mentioned)
     <li><a href="https://discord.gg/RXsQQ4eGYF">i helped this server</a></li>
     <li><a href="https://x.com/america">the last place ill be going</a></li>
 </ul>
+<p>
+<h1>websites</h1>
+<ul>
+    <li><a href="https://jswagging.github.io/this-is-not-a-good-website/">this is not a good website</a></li>
+    <li><a href="https://github.com/jswagging/secret">secret website thing</a></li>
+</ul>
 
 <script>
     const toggle = document.getElementById("darkModeToggle");
