--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <h1>welcome</h1>
 
 <p>
-hi, im jamer.<br>
+hi, im jamer<br>
 he/him<br>
 im an image editor<br>
 i also like gaming<br>
@@ -70,7 +70,7 @@ steam games (and another game that shall not be mentioned)
 <h1>websites</h1>
 <ul>
     <li><a href="https://jswagging.github.io/this-is-not-a-good-website/">this is not a good website</a></li>
-    <li><a href="https://github.com/jswagging/secret">secret website thing</a></li>
+    <li><a href="https://jswagging.github.io/secret">secret website thing</a></li>
 </ul>
 
 <script>
