--- a/index.html
+++ b/index.html
@@ -76,6 +76,8 @@ welcome to jamer.xyz, please select where you would like to go...<br>
 </p>
 
 <a href="https://jamer.xyz/bio">bio</a><br>
+<a href="https://jamer.xyz/this-is-not-a-good-website/">this is not a good website</a><br>
+<a href="https://jamer.xyz/secret">secret website thing</a>
 
 <h1 id="socials">socials</h1>
 
