--- a/index.html
+++ b/index.html
@@ -60,6 +60,10 @@
             max-width: 700px;
             margin: 40px auto;
         }
+        
+    <meta content="jamer.xyz" property="og:title" />
+    <meta content="press me to see jamer's website" property="og:description" />
+    <meta content="#FFAC1C" data-react-helmet="true" name="theme-color" />
     </style>
 </head>
 
