--- a/404.html
+++ b/404.html
@@ -1,47 +1,103 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>404</title>
-        <style>
-            body{
-            background-color: #202124;
-            color: #ffffff;
-            }
-            .heading {
-               text-align: center;
-               position: fixed;
-               width: 100%;
-                        }
-            
-            .footer {
-               position: fixed;
-               left: 0;
-               bottom:0;
-               width: 100%;
-               text-align: center;
-            }
-                        a:link {
-              color: #8ab4f8;
-              background-color: transparent;
-              text-decoration: none;
-            }
-            a:visited {
-              color: #c58af9;
-              background-color: transparent;
-              text-decoration: none;
-            }
-            a:hover {
-              color: #c58af9;
-              background-color: transparent;
-              text-decoration: underline;
-            }
-        </style>
-    </head>
-    <body>
-        <div class="heading">
-            <h1>I don't know what this Page is ¯\_(ツ)_/¯ (This Page doesn't exist :/ )</h1>
-        </div>
+<head>
+    <title>404 — jamer.xyz</title>
+    <meta content="404" property="og:title" />
+    <meta content="this page does not exist" property="og:description" />
+    <meta content="#FFAC1C" data-react-helmet="true" name="theme-color" />
 
-    </body>
+    <style>
+        body {
+            background: #111;
+            color: #eaeaea;
+            font-family: Arial, sans-serif;
+            transition: background 0.2s, color 0.2s;
+            text-align: center;
+            margin: 0;
+        }
+
+        body.light {
+            background: white;
+            color: black;
+        }
+
+        body.light a {
+            color: #0000ee;
+        }
+
+        body:not(.light) a {
+            color: #8aa2ff;
+        }
+
+        #darkModeToggle {
+            position: fixed;
+            top: 10px;
+            right: 10px;
+            cursor: pointer;
+            font-size: 14px;
+            text-decoration: underline;
+        }
+
+        .container {
+            max-width: 700px;
+            margin: 80px auto;
+        }
+
+        h1 {
+            margin-bottom: 10px;
+        }
+
+        p {
+            opacity: 0.85;
+        }
+
+        a {
+            text-decoration: none;
+            font-weight: bold;
+        }
+    </style>
+</head>
+
+<body>
+
+<div id="darkModeToggle">light mode</div>
+
+<div class="container">
+
+<h1>404</h1>
+
+<p>
+i don't know what this page is ¯\_(ツ)_/¯<br>
+(this page does not exist)
+</p>
+
+<br>
+
+<a href="https://jamer.xyz">← go back home</a>
+
+</div>
+
+<script>
+    const toggle = document.getElementById("darkModeToggle");
+
+    if (localStorage.getItem("mode") === "light") {
+        document.body.classList.add("light");
+        toggle.textContent = "dark mode";
+    }
+
+    toggle.addEventListener("click", () => {
+        document.body.classList.toggle("light");
+
+        if (document.body.classList.contains("light")) {
+            localStorage.setItem("mode", "light");
+            toggle.textContent = "dark mode";
+        } else {
+            localStorage.setItem("mode", "dark");
+            toggle.textContent = "light mode";
+        }
+    });
+</script>
+
+</body>
 </html>
+
