--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta content="jamer.xyz" property="og:title" />
     <meta content="press me to see jamer's website" property="og:description" />
     <meta content="#FFAC1C" data-react-helmet="true" name="theme-color" />
-    <link rel="icon" type = "resources/image/png" href = "resources/images/icon.png">
+    <link rel="icon" type = "resources/images/png" href = "resources/images/icon.png">
 
     <style>
         body {
