--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <title>jamer.xyz</title>
     <meta content="jamer.xyz" property="og:title" />
     <meta content="press me to see jamer's website" property="og:description" />
+    <meta content="https://raw.githubusercontent.com/jswagging/jamer.xyz/main/resources/images/icon.png" property="og:image" />
     <meta content="#FFAC1C" data-react-helmet="true" name="theme-color" />
-    <link rel="icon" type = "resources/images/png" href = "resources/images/icon.png">
 
     <style>
         body {
