--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>jamer.xyz</title>
     <meta content="jamer.xyz" property="og:title" />
-    <meta content="press me to see jamer's website" property="og:description" />
+    <meta content="press /\ to see my website, anyways im jamer" property="og:description" />
     <meta content="https://raw.githubusercontent.com/jswagging/jamer.xyz/main/resources/images/icon.png" property="og:image" />
     <meta content="#FFAC1C" data-react-helmet="true" name="theme-color" />
 
